# BMSTU-AL-HW4

./: .gitignore  .travis.yml  CMakeLists.txt  Console.h  Database.h  Dockerfile  Exception.h  Model.h  README.md  Shortcut.h  appveyor.yml  main.cpp
include/: Command.h  Console.h  Database.h  Exception.h  Interaction.h  Model.h  Shortcut.h
include/Command/: Command.h  CommandApply.h  CommandCreate.h  CommandGo.h  CommandHelp.h  CommandLeave.h  CommandList.h  CommandLoad.h  CommandRemove.h  CommandSave.h  CommandsAll.h
include/Model/: BaseSubdivisionModel.h  CourseModel.h  EducationalSubdivisionModel.h  Model.h  ProjectModel.h  ScientificSubdivisionModel.h
source/: Console.cpp  Database.cpp  Interaction.cpp
source/Command/: CommandApply.cpp  CommandCreate.cpp  CommandGo.cpp  CommandHelp.cpp  CommandLeave.cpp  CommandList.cpp  CommandLoad.cpp  CommandRemove.cpp  CommandSave.cpp  CommandUnload.cpp
source/Model/: BaseSubdivisionModel.cpp  CourseModel.cpp  EducationalSubdivisionModel.cpp  ProjectModel.cpp  ScientificSubdivisionModel.cpp
tests/: ModelTests.cpp  ShortcutTests.cpp
